No longer uses variables from o-fonts for specifying font-family. Instead uses oFontsGetFontFamilyWithFallbacks(); Added rendering fix for webkit bug resulting in web fonts not showing.

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,4 +1,8 @@
-@import "o-fonts/main";
+@mixin _oFtTypographyFont($family, $weight:normal, $style:normal) {
+  font-family: oFontsGetFontFamilyWithFallbacks($family);
+  font-weight: $weight;
+  font-style: $style;
+}
 
 @mixin oFtTypographyFontOffset($offset) {
   @if ($offset > 0) {
